LIST OF CHANGES
---------------

 - Following a release on 07/09/2024, see https://metacpan.org/dist/App-perlbrew/changes,
   the checksum of the script served by https://install.perlbrew.pl had changed.
   https://install.perlbrew.pl is a redirect to raw
   https://github.com/gugod/App-perlbrew/blob/master/perlbrew-install, so
   the change originates from GitHub and can be trusted. Our CI flow compares
   the checksum of the downloaded script to the expected value. We now store
   an updated expected checksum value, which corresponds to the latest release.
 - GitHub CI - updated deprecated v2 runner to v3


release 68.5.0 (2024-09-04)
 - The runfolder_path argument is added to the command for the autoqc review
   check. See https://github.com/wtsi-npg/npg_qc/pull/869

release 68.4.0 (2024-08-06)
 - Ensured mark duplicate method can be inferred for a product with multiple
   studies (tag zero).
 - Upgrading tests
   - Use contemporary run folders for tests (NovaSeqX)
   - Clean fixtures
   - Prevent tests from accessing live databases (reset HOME)

release 68.3.0 (2024-05-24)
 - Removing Tidyp dependency from CI
 - Added 'SampleSheet.csv' file from the top level of the run folder to
   a list of archived run-level Illumina data. This file is only present
   in MiSeq run folders.

release 68.2.0
 - Added '--process_separately_lanes' to the pipeline to explicitly exclude
   multiple lanes from a merge.
 - Generalised dir_path method in npg_pipeline::product. This fixed a bug in
   npg_run_is_deletable, which manifested in wrong expectations about the
   directory tree for partially merged run data. 
 - Dropped a check for DRAGEN analysis data from npg_run_is_deletable.
 - Removed unnecessary tests from t/10-pluggable-central.t

release 68.1.0
 - Apply changes to the code and tests, which follow from removing some
   functionality from npg_tracking::illumina::runfolder, see
   https://github.com/wtsi-npg/npg_tracking/pull/807. The pipeline retains